--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
+    // Use map to find all inventors born between 1500 and 1599
+    // map alone will return a 12 element array with 10 null values
+    // use filter to cut out the null values
+    const oldInventors = inventors.map( inventor => {
+      if ( inventor.year > 1499 && inventor.year < 1601 ) {
+        return inventor;
+      } else {
+        return null;
+      }
+    }).filter( inventor => {
+      if ( inventor !== null ) return inventor;
+    });
+
+    console.dir( oldInventors );
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
 
