--- a/index.html
+++ b/index.html
@@ -56,12 +56,18 @@
       if ( bornInFifteenHundreds(inventor) ) return inventor;
     });
 
-    console.dir( oldInventors );
+    // console.dir( oldInventors );
     
 
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+
+    const names = inventors.map( inventor => {
+      return `${inventor.first} ${inventor.last}`; //thank you ES6 string interpolation
+    });
+
+    console.dir( names );
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
